<resources>
    <string name="appName">Free note</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="priority">Priority</string>
    <string name="minor">Minor</string>
    <string name="normal">Normal</string>
    <string name="major">Major</string>
    <string name="critical">Critical</string>
    <string name="description">Description</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="addNote">Add note</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="settings">Settings</string>
    <string name="calendar">Google calendar</string>
    <string name="remove">Remove</string>
    <string name="selectAll">Select all</string>
    <string name="search_hint">Search</string>
    <string name="menu_search">Search</string>
    <string name="info">Information</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="note_editor_cancel_dialog">can not be empty, continue edit?</string>
    <string name="common">Common</string>
    <string name="enableSearch">Enable search</string>
    <string name="enableSearchDesc">This setting enables / disables the search for notes</string>
    <string name="widgetName">Free note widget</string>
    <string name="all">All</string>
    <string name="from">From </string>
    <string name="to"> to </string>
    <string name="getData">Data synchronization</string>
    <string name="clearAccount">Reset settings</string>
    <string name="select">"Select date"</string>
    <string name="requestCancelled">Request cancelled</string>
    <string name="followingErrorOccurred">The following error occurred:</string>
    <string name="dataRetrievedUsing">Data retrieved using the Google Calendar API:</string>
    <string name="noResultsReturned">No results returned.</string>
    <string name="thisAppRequiresGooglePlayServices">This app requires Google Play Services. Please install</string>
    <string name="thisAppRequiresGooglePlayServices_">Google Play Services on your device and relaunch this app.</string>
    <string name="thisAppNeedsToAccessYourProfile">This app needs to access your Google account (via Contacts).</string>
    <string name="noNetworkConnectionAvailable">No network connection available.</string>
    <string name="callingGoogleCalendarAPI">Calling Google Calendar API …</string>
    <string name="added">Added</string>
    <string name="updated">Updated</string>
    <string name="title_activity_reminder">ReminderActivity</string>
    <string name="addReminder">Add Reminder</string>
    <string name="Mo">Mo</string>
    <string name="Tu">Tu</string>
    <string name="We">We</string>
    <string name="Th">Th</string>
    <string name="Fr">Fr</string>
    <string name="Sa">Sa</string>
    <string name="Su">Su</string>
</resources>
