<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:market_app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@mipmap/ic_search_white_24dp"
        market_app:showAsAction="always"/>
    <item
        android:id="@+id/addItem"
        android:title="@string/add"
        android:icon="@mipmap/ic_library_add_white_24dp"
        market_app:showAsAction="always" />
    <item
        android:id="@+id/removeItems"
        android:title="@string/remove"
        android:icon="@mipmap/ic_delete_white_24dp"
        market_app:showAsAction="always"/>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        market_app:showAsAction="never" />
</menu>