<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:text="@string/from"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="145dp"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:id="@+id/fromField"
            />

        <Button
            android:id="@+id/selectFrom"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:text="@string/select"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:text="@string/to"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="145dp"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:id="@+id/toField"
            />

        <Button
            android:id="@+id/selectTo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:text="@string/select"
            />
    </LinearLayout>

    <Button
        android:id="@+id/clearAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clearAccount"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <Button
        android:id="@+id/getButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/getData"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/result"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>